<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotorSkillsGameActivity">

    <TextView
        android:id="@+id/motor_skills_game_title"
        style="@style/TextSubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/title_motor_skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motor_skills_game_incorrect_info"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textview_attempts_plural"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motor_skills_game_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motor_skills_game_constraint_layout"
        android:layout_width="721sp"
        android:layout_height="785sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/motor_skills_game_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motor_skills_game_incorrect_info">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/motor_skills_game_start_game"
        style="@style/button_yellow_background"
        android:layout_marginBottom="120dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/motor_skills_game_play_again"
        style="@style/button_yellow_background"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="68dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/motor_skills_game_exit_game"
        style="@style/button_yellow_background"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="68dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/motor_skills_game_play_again" />


</androidx.constraintlayout.widget.ConstraintLayout>