...

    <!--Generic Game Related strings-->
    <string name="start_game">Start Game</string>
    <string name="next_round">Next Round</string>
    <string name="attempts_none">No attempts remaining</string>
    <string name="textview_attempts_plural">%1$s attempts remaining</string>
    <string name="textview_attempts_singular">%1$s attempt remaining</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit Game</string>
    <string name="game_round">Round %1$s</string>

    <!--Reaction Game Strings-->
    <string name="reactionGame_tap">TAP</string>
    <string name="reactionGame_information">Tap the yellow circle as soon as you see it.</string>
    <string name="reactionGame_tap_to_early">Try not to tap the screen until the yellow circle appears</string>
    <string name="reactionGame_exception_timer_not_started">Attempted to measure elapsed time but start time has not been set.</string>
...

    <!--Visual Memory Game Strings-->
    <string name="visual_memory_textview_remember">Remember this pattern</string>
    <string name="visual_memory_textview_start_pattern">Enter in the pattern</string>
    <string name="visual_memory_textview_game_complete">Game Complete</string>
    <string name="visual_memory_textview_round_complete">You are correct!</string>
    <string name="visual_memory_textview_try_plural">%1$s tries remaining</string>
    <string name="visual_memory_textview_try_singular">%1$s try remaining</string>
    <string name="visual_memory_textview_score">Score: %1$s squares</string>
    <string name="visual_memory_tag_error_check">Incorrect Guess</string>
    <string name="visual_memory_tag_not_correct_button">Not Correct</string>
    <string name="visual_memory_tag_pattern_check">Part of Pattern</string>

...
    <string name="settings_button_submit">Submit</string>
    <string name="settings_toast_security_reset_successful">Security Questions set successfully</string>
    <string name="settings_toast__error_password">Please enter your current password to make any changes</string>

    <!-- Motor Skills Game -->
    <string name="motor_skills_game_score_one">Score: %1$s Round</string>
    <string name="motor_skills_game_score_multiple">Score: %1$s Rounds</string>


    <!--Generic Strings-->
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_body">"In regards to this app\nNeurolab by Soteria is designed as an assistant tool only. It should not be relied upon for treatment, diagnosis\n or professional medical advice. If you have any queries about its use,\nplease consult your local physician or health care provider.
        \nIn regards to personal data\nSoteria do not store any personal data you enter on external hardware, \ninformation gathered by this app will stay on the device installed. Your information, \nand control over it, is accessible only to you or your healthcare provider.
...
